#
# $Id: Makefile.am,v 79df6e8e7b5d 2010/06/23 14:52:39 Hirochika $
#
# Copyright (c) 2010 Scyphus Solutions Co. Ltd.  All rights reserved.
# Authors:
#      Hirochika Asai  <asai@scyphus.co.jp>
#

INCLUDES = -I$(top_srcdir)/include

lib_LTLIBRARIES = libanacap.la
libanacap_la_SOURCES = anacap.c l2.c l3.c l4.c bsconv.c anacap_private.h

CLEANFILES = *~
